# packages/api/src/presentation/rest/modules/spf-module/dto/spf-module-cal-data-response.dto.ts
@@ -1,0 +1,12 @@
+/*
+ * Copyright (c) Qualcomm Technologies, Inc. and/or its subsidiaries.
+ * SPDX-License-Identifier: BSD-3-Clause
+ */
+
+import {CalDataDto} from '../../../common/dto/tuningData/cal-data.dto.js';
+
+/**
+ * Response DTO for SPF module calibration data API.
+ * Extends CalDataDto with calibration data for SPF modules.
+ */
+export class SpfModuleCalDataResponseDto extends CalDataDto {}
